# media-search-solution

./: CHANGELOG.md  Dockerfile  README.md  cloudbuild.yaml
analyze/common/: BUILD.bazel  basic_run_config.go  basic_step_config.go  command_step_config.go  common.go  genai_run_config.go  genai_step_config.go
analyze/steps/analysis/: BUILD.bazel  Dockerfile  analyze_workflow.go  content_type_step.go  generate_embeddings.go  get_content_length.go  get_content_summary.go  get_segment_summaries.go  get_segment_summary.go  persist.go
analyze/steps/proxy/: BUILD.bazel  Dockerfile  generate_proxy.go
configs/: .env.toml
docs/: DeveloperSetup.md  PromptConfiguration.md
pkg/cloud/: state.go  utils.go  wrappers.go
pkg/commands/: media_config_update.go
pkg/workflow/: BUILD.bazel
scripts/: cleanup_media_file.sh  deploy_media_search.sh  setup_terraform.sh
test/workflow/: BUILD.bazel
web/apps/api_server/: BUILD.bazel  setup.go
