# Copyright 2025 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Author: kingman (Charlie Wang)

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "common",
    srcs = [
        "basic_run_config.go",
        "basic_step_config.go",
        "command_step_config.go",
        "common.go",
        "genai_run_config.go",
        "genai_step_config.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/media-search-solution/analyze/common",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cloud",
        "@com_google_cloud_go_bigquery//:bigquery",
        "@com_google_cloud_go_storage//:storage",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@org_golang_google_genai//:genai",
    ],
)
