load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# Copyright 2024 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

go_library(
    name = "proxy_lib",
    srcs = ["generate_proxy.go"],
    importpath = "github.com/GoogleCloudPlatform/media-search-solution/analyze/steps/proxy",
    visibility = ["//visibility:private"],
    deps = ["//analyze/common"],
)

go_binary(
    name = "generate_proxy",
    data = [
        "//:copy_ffmpeg",
    ],
    embed = [":proxy_lib"],
    visibility = ["//visibility:public"],
)
